# Hybrid_AI_Agent_Tech_Vaseegrah

./: AWS_DEPLOY_GUIDE.md  Dockerfile  README.md  aws-setup.sh  default.conf  deploy.yml  docker-compose.prod.yml  docker-compose.yml  dockerignore  docs.pkl  ec2-bootstrap.sh  graph_fallback.py  ingest_files.py  ingest_mongo.py  main.py  mongo.py  nginx.conf  pyproject.toml  requirements.txt  retrievers.py  ros2_workflow.json  server.py  setup.py  utils_module.py  vector_store.py
agents/: __init__.py  generator_agent.py  intent_classifier.py  language_agent.py  retriever_agent.py  web_search_agent.py
auth/: dependencies.py  key_manager.py  models.py
config/: mongo_client.py  settings.py
dashboard/: dashboard.html
data/customers/7a3245ac-7078-481b-86a2-684e6a0c22e3/: docs.pkl
data/customers/d3e7c8a5-20fe-48f3-a1c9-909d897760fe/: docs.pkl
data/default/: docs.pkl  product_prices.txt
graph/: __init__.py  agent_graph.py
llm/: __init__.py  openai_client.py
memory/: __init__.py  conversation_timing.py  customer_config.py  ingestor.py  mongo_memory.py  vector_store.py
routers/: admin_router.py  agentic_router.py  chat_router.py  client_router.py  dashboard_router.py
utils/: __init__.py  domain_filter.py
