[project]
name = "rag-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.86.0",
    "faiss-cpu>=1.13.2",
    "langchain>=1.2.13",
    "langgraph>=1.1.3",
    "numpy>=2.4.4",
    "pymongo>=4.16.0",
    "pypdf>=6.9.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "sentence-transformers>=5.3.0",
]
